Login with Firebase implementation

--- a/templates/layout_main-drawer_footer_topbar.html
+++ b/templates/layout_main-drawer_footer_topbar.html
@@ -9,7 +9,7 @@
     </div>
     <div class="mdc-drawer__content">
         <nav class="mdc-list">
-            <a class="mdc-list-item" href="/home/" aria-current="page" tabindex="0">
+            <a class="mdc-list-item" href="/wsms/" aria-current="page" tabindex="0">
                 <span class="mdc-list-item__ripple"></span>
                 <i class="material-icons mdc-list-item__graphic" aria-hidden="true">home</i>
                 <span class="mdc-list-item__text">Bienvenido</span>
@@ -136,7 +136,7 @@
             <div class="mdc-layout-grid__cell">
                 <section class="footer-about">
                     <div class="footer-section__title">
-                        SMSWhapp
+                        SMSWHAPP
                     </div>
                     <div class="footer-about__text">
                         WhatsApp API SMS for R&D.
