--- a/templates/layout_main.html
+++ b/templates/layout_main.html
@@ -68,6 +68,15 @@
     <meta name="msapplication-TileColor" content="#01579b">
     <meta name="msapplication-tap-highlight" content="no">
 
+    <!-- Firebase app, analytics and auth JS - Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.10.0/firebase-auth.js"></script>
+   
+    <!-- FirebaseUI JS and CSS - Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/ui/4.4.0/firebase-ui-auth__es_419.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.4.0/firebase-ui-auth.css" />
+
     {% block head_section %}{% endblock %}
 
 </head>
