Message and webhooks implementation

--- a/templates/wassenger.html
+++ b/templates/wassenger.html
@@ -133,8 +133,6 @@
                                             +503 7684 2455 (Control)
                                         </span>
                                     </li>
-                                </ul>
-                                <ul class="mdc-list mdc-select__list">
                                     <li class="mdc-list-item" data-value="t2">
                                         <span class="mdc-list-item__text">
                                             +503 7684 8930 (Tratamiento)
@@ -356,6 +354,11 @@
                         <div class="container-smswhapp-sms container--hidden" data-value-sms="4">
                             <p class="s-font-align-center">
                                 Validar Cuentas de WhatsApp de la Base de Datos.
+                            </p>
+                        </div>
+                        <div class="container-smswhapp-sms container--hidden" data-value-sms="5">
+                            <p class="s-font-align-center">
+                                Enviar mensaje de Bienvenida a la Base de Datos.
                             </p>
                         </div>
                     </div>
