Welcome Msg & Validate Sending Hours implemented

--- a/templates/wassenger.html
+++ b/templates/wassenger.html
@@ -358,7 +358,12 @@
                         </div>
                         <div class="container-smswhapp-sms container--hidden" data-value-sms="5">
                             <p class="s-font-align-center">
-                                Enviar mensaje de Bienvenida a la Base de Datos.
+                                Enviar mensaje de Bienvenida (Control).
+                            </p>
+                        </div>
+                        <div class="container-smswhapp-sms container--hidden" data-value-sms="6">
+                            <p class="s-font-align-center">
+                                Enviar mensaje de Bienvenida (Tratamiento).
                             </p>
                         </div>
                     </div>
